Telegram explanation and client-side render for string degrees in homepage (#415)
* Overhaul of localization service

Putemm capì mo

* Initial setup of telegram new page

* Telegram page almost done

* update telegram page

* Fix getPath on courses/slug route

* Update it.ts

* Client-side load of string degrees for homepage

Enable static generation for homepage (niceimprovement)

---------

Co-authored-by: Giuseppe Del Campo <giuseppe.delcampo@outlook.com>

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -416,3 +416,50 @@ footer .ms-Label {
     max-width: 100% !important;
   }
 }
+
+/* media query for Telegram page */
+@media only screen and (max-width: 500px) {
+  .telegramText3 {
+    font-size: 24px;
+  }
+
+  .telegramDoubleQuote{
+    flex-direction: column !important;
+    gap: 0 !important;
+    text-align: center;
+  }
+}
+
+.chip-shimmer {
+  position: relative;
+  overflow: hidden;
+}
+
+.chip-shimmer::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background-image: linear-gradient(to right,
+      transparent 0%,
+      rgba(255, 255, 255, 0.2) 40%,
+      transparent 60%,
+      transparent 100%);
+  transform: rotate(45deg);
+}
+
+.chip-shimmer::after {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background-image: linear-gradient(to bottom,
+      transparent 0%,
+      rgba(255, 255, 255, 0.2) 40%,
+      transparent 60%,
+      transparent 100%);
+}
